#1013 adjusted tests