@@ -248,7 +248,7 @@ public class YamlRuleParserPlugin extends AbstractRuleParserPlugin {
 
             if (reportBlock.containsKey(KEY_COLUMNS)) {
                 List<String> keyColumnsList = new ArrayList<>();
-                keyColumnsList = Arrays.asList(((String) reportBlock.get(KEY_COLUMNS)).split("\\s*,\\s*"));
+                keyColumnsList = List.of(((String) reportBlock.get(KEY_COLUMNS)).split("\\s*,\\s*"));
                 reportBuilder.keyColumns(keyColumnsList);
             }
 
